Build tools refactoring