@@ -15,20 +15,20 @@
 	limitations under the License.
  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
 		<groupId>io.inverno</groupId>
 		<artifactId>inverno-applications-root</artifactId>
 		<version>1.3.0-SNAPSHOT</version>
 	</parent>
-    <groupId>io.inverno.app</groupId>
-    <artifactId>inverno-ticket</artifactId>
-    
+	<groupId>io.inverno.app</groupId>
+	<artifactId>inverno-ticket</artifactId>
+
 	<name>io.inverno.app.ticket</name>
 	<description>Inverno Ticket application</description>
 
-    <dependencies>
+	<dependencies>
 		<dependency>
 			<groupId>io.inverno.mod</groupId>
 			<artifactId>inverno-boot</artifactId>
@@ -135,7 +135,7 @@
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
-    </dependencies>
+	</dependencies>
 
 	<build>
 		<pluginManagement>
@@ -153,6 +153,48 @@
 
 	<profiles>
 		<profile>
+			<id>debug</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>io.inverno.tool</groupId>
+						<artifactId>inverno-maven-plugin</artifactId>
+						<configuration>
+						<vmOptions>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000 --add-opens reactor.core/reactor.core.publisher=lettuce.core --add-opens org.apache.logging.log4j.core/org.apache.logging.log4j.core.jackson=com.fasterxml.jackson.databind --add-opens org.apache.logging.log4j.log4j.layout.template.json/org.apache.logging.log4j.layout.template.json=org.apache.logging.log4j.core --add-modules io.netty.transport.unix.common,io.netty.transport.classes.epoll,io.netty.transport.epoll.linux.x86_64</vmOptions>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>build-runtime</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>io.inverno.tool</groupId>
+						<artifactId>inverno-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>build-runtime</id>
+								<phase>package</phase>
+								<goals>
+									<goal>build-runtime</goal>
+								</goals>
+								<configuration>
+									<vm>server</vm>
+									<!-- jdk.crypto.ec: TLS, jdk.jdwp.agent: remote debug -->
+									<addModules>jdk.crypto.ec,jdk.jdwp.agent</addModules>
+									<archiveFormats>
+										<archiveFormat>zip</archiveFormat>
+									</archiveFormats>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>release</id>
 			<build>
 				<plugins>
@@ -161,10 +203,10 @@
 						<artifactId>inverno-maven-plugin</artifactId>
 						<executions>
 							<execution>
-								<id>build-app</id>
+								<id>package-app</id>
 								<phase>package</phase>
 								<goals>
-									<goal>build-app</goal>
+									<goal>package-app</goal>
 								</goals>
 								<configuration>
 									<vm>server</vm>
@@ -176,9 +218,9 @@
 											<vmOptions>-Xms2G -Xmx2G -XX:+UseNUMA -XX:+UseParallelGC --add-opens reactor.core/reactor.core.publisher=lettuce.core --add-opens org.apache.logging.log4j.core/org.apache.logging.log4j.core.jackson=com.fasterxml.jackson.databind --add-opens org.apache.logging.log4j.log4j.layout.template.json/org.apache.logging.log4j.layout.template.json=org.apache.logging.log4j.core --add-modules io.netty.transport.unix.common,io.netty.transport.classes.epoll,io.netty.transport.epoll.linux.x86_64</vmOptions>
 										</launcher>
 									</launchers>
-									<formats>
-										<format>zip</format>
-									</formats>
+									<archiveFormats>
+										<archiveFormat>zip</archiveFormat>
+									</archiveFormats>
 								</configuration>
 							</execution>
 						</executions>
@@ -195,10 +237,10 @@
 						<artifactId>inverno-maven-plugin</artifactId>
 						<executions>
 							<execution>
-								<id>build-image-docker</id>
+								<id>install-image</id>
 								<phase>install</phase>
 								<goals>
-									<goal>build-image-docker</goal>
+									<goal>install-image</goal>
 								</goals>
 								<configuration>
 									<vm>server</vm>
